# fcitx5-vinput

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  justfile
.github/workflows/: channels.yml  ci.yml  release.yml
data/asr-providers/: README.md  elevenlabs_speech_to_text.py
data/llm-adaptors/: README.md  mtranserver_proxy.py
examples/rs_proto/src/: asr_engine.rs  audio_capture.rs  dbus_service.rs  main.rs
i18n/: vinput-gui_zh_CN.ts
packaging/arch/: PKGBUILD.in
packaging/fedora/: fcitx5-vinput.spec
packaging/flatpak/: ci-manifest.yaml  org.fcitx.Fcitx5.Addon.Vinput.yaml
po/: fcitx5-vinput.pot
rust_porting/daemon_rs/: Cargo.toml
rust_porting/daemon_rs/src/: adaptor_manager.rs  dbus_service.rs  main.rs  post_processor.rs
scripts/: build-sherpa-onnx.sh  ci-install-build-deps.sh  ci-verify-channel-install.sh  sherpa-onnx-vars.sh
src/addon/: CMakeLists.txt  vinput.cpp  vinput.h  vinput_dbus.cpp  vinput_keyevent.cpp
src/cli/: command_adaptor.cpp  command_adaptor.h  command_recording.cpp  dbus_client.cpp  dbus_client.h
src/common/: adaptor_manager.cpp  adaptor_manager.h  config_path.cpp  core_config.cpp  dbus_interface.h  error_info.cpp  file_utils.cpp  file_utils.h  model_manager.cpp  model_repository.cpp  model_repository.h  process_utils.cpp  vinput_config.cpp
src/daemon/: CMakeLists.txt  asr_provider.cpp  audio_capture.cpp  dbus_service.cpp  dbus_service.h  main.cpp  post_processor.cpp
src/gui/: CMakeLists.txt  mainwindow.cpp
