[package]
name = "vinput-daemon-proto"
version = "0.1.0"
edition = "2021"
description = "Prototype for fcitx5-vinput daemon in Rust"

[dependencies]
sherpa-onnx = "1.12"
tokio = { version = "1", features = ["full"] }
zbus = { version = "4.4", features = ["tokio"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
parking_lot = "0.12"

[[bin]]
name = "vinput-daemon"
path = "src/main.rs"
